--- a/syntia_react/app.json
+++ b/syntia_react/app.json
@@ -7,12 +7,12 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/logo_nav.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#27AE60"
     },
     "assetBundlePatterns": [
-      "**/*"
+      
     ],
     "ios": {
       "supportsTablet": true
