--- a/EnglishClass/app.json
+++ b/EnglishClass/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "EnglishClass",
-    "slug": "EnglishClass",
+    "name": "dog-app",
+    "slug": "dog-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/cetis01.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/cetis1.png",
+      "image": "./assets/cetis01.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
